Fix author text going off-screen and offsetting carousel item positioning

--- a/src/Carousel/Carousel.scss
+++ b/src/Carousel/Carousel.scss
@@ -26,6 +26,9 @@
   margin: 7px 0;
   text-decoration: none;
   font-weight: bold;
+  text-align: center;
+  width: 100%;
+  white-space: normal
 }
 
 .carousel-item-tags {
